--- a/src/main/resources/broker.properties
+++ b/src/main/resources/broker.properties
@@ -1,2 +1,3 @@
+#ActiveMQ
 java.naming.factory.initial=org.apache.activemq.jndi.ActiveMQInitialContextFactory
 java.naming.provider.url=tcp://localhost:61616
