Created basic GUI.

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,6 @@
       <!-- to avoid class cast exceptions -->
       <scope>provided</scope>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -140,4 +139,12 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+    <repository>
+      <url>http://download.eclipse.org/rt/eclipselink/maven.repo/</url>
+      <id>eclipselink</id>
+      <layout>default</layout>
+      <name>Repository for library EclipseLink (JPA 2.0)</name>
+    </repository>
+  </repositories>
 </project>
